@@ -2,6 +2,8 @@ dclone package versions
 
 Version 0.2-4, October 1, 2009
 
+    * errlines: got vertical = TRUE argument.
+
 Version 0.2-3, August 6, 2009
 
     * coef.mcmc.list and confint.mcmc.list.cd:
